<resources>
    <string name="shared_key" translatable="false">POKESCANNER</string>
    <string name="title_activity_maps">Map</string>
    <string name="scan">Scan</string>
    <string name="login">Login</string>
    <string name="ptclogin">PTC Login</string>
    <string name="googlelogin">Google Login</string>
    <string name="poke_scanner" translatable="false">PokéScanner</string>
    <string name="blacklist">Blacklist</string>
    <string name="save">Save</string>
    <string name="search_radius">Search Radius</string>
    <string name="search_radius_desc">Allows you to change the search radius of Poke Scanner (warning large values will slow down your device)</string>
    <string name="higher_number_slower_search">1 Unit ≈ 140 Meters</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="none">None</string>
    <string name="select_all">Select All</string>
    <string name="pokemon_name">Pokémon Name</string>
    <string name="AUTH_FAILED">Bad Login Credentials</string>
    <string name="SERVER_FAILED">Servers not responding</string>
    <string name="ERROR_FILTERS">Error loading filters</string>
    <string name="LOGIN_OK">Login Successful</string>
    <string name="PERMISSION_OK">Thanks for the permission!</string>
    <string name="ptcgoogleusername">PTC/Google Username</string>
    <string name="TRYING_PTC_LOGIN">Trying PTC login.</string>
    <string name="TRYING_GOOGLE_LOGIN">Trying Google Login.</string>
    <string name="SCAN_FAILED">Scan Failed</string>
    <string name="ERROR_LOGIN">Login Issue (Try relogging)</string>
    <string name="ERROR_THREAD">Scan Canceled</string>
    <string name="ERROR_SERVER">Servers not responding</string>
    <string name="ERROR_LOW_MEMORY">Low Memory Detect! Clearing Gyms/Pokestops</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="warning_nplease_do_not_use_your_main_pokego_naccount_for_this_app">WARNING: \nPlease do not use your main PokeGo \naccount for this app!</string>
    <string name="filter_pokemon">Filter Pokémon</string>
    <string name="filter_gyms">Filter gyms</string>
    <string name="timeEstimate">Estimate Scan Time: </string>
    <string name="hide">Hide</string>
    <string name="searchicon">SearchIcon</string>
    <string name="menubutton">MenuButton</string>
    <string name="yellow_team">Yellow team</string>
    <string name="blue_team">Blue team</string>
    <string name="red_team">Red team</string>
    <string name="neutral_gyms">Neutral gyms</string>
    <string name="guard_pokemon_cp">Guard Pokémon CP</string>
    <string name="guard_cp_description">Select the range of cp values for the guardian pokemon of gyms</string>
    <string name="_0" translatable="false">0</string>
    <string name="expiration_time">Hide Pokémon expiring in</string>
    <string name="expiration_min">Min:</string>
    <string name="expiration_max">Max:</string>
    <string name="show_neutral_gyms">Show Neutral gyms</string>
    <string name="show_yellow_gyms">Show Yellow gyms</string>
    <string name="show_blue_gyms">Show Blue gyms</string>
    <string name="show_red_gyms">Show Red gyms</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="check_hidden">Check = Hidden</string>
    <string name="server_refresh">Server Refresh</string>
    <string name="server_refresh_desc">Adjust the rate at which the map is scanned (If you are on a poor connection you should be on slow)</string>
    <string name="pokemon_filters">Pokémon Filters</string>
    <string name="map_refresh">Map Refresh</string>
    <string name="map_refresh_desc">Adjust the rate at which the map refreshes (Older devices should be on the slower setting)</string>
    <string name="donate">Donate</string>
    <string name="category_donate">Donate and Support continued development!</string>
    <string name="category_map_options">Map Options</string>
    <string name="category_extendedMap_options">Advanced Map Options</string>
    <string name="category_filters">Filter Options</string>
    <string name="category_clear">Clear Options</string>
    <string name="enable_update">Enable Auto-Updates</string>
    <string name="enable_update_desc">Checks every time you start to the app if there is an update (On by default).</string>
    <string name="enable_low_memory">Enable Low Memory Management</string>
    <string name="enable_low_memory_desc">Allows the application to clear Pokémon/Gyms/Pokestops to prevent memory issues</string>
    <string name="show_range">Show Range</string>
    <string name="show_range_desc">Creates a black round circle around the scanning area.</string>
    <string name="show_expiration_filter">Pokémon Expiration Filter</string>
    <string name="show_expiration_filter_desc">Allows you to choose expiration time</string>
    <string name="show_pokemon_filter">Pokémon Filter</string>
    <string name="show_pokemon_filter_desc">Allows you to pick and choose which Pokémon appear on the map</string>
    <string name="show_pokemon_blacklist_filter">Pokémon Blacklist</string>
    <string name="show_pokemon_blacklist_filter_desc">Allows you to pick which Pokémon you do not want to see on the map</string>
    <string name="show_gym_filter">Gym Filter</string>
    <string name="show_gym_filter_desc">Allows you to pick which gyms will appear on the map</string>
    <string name="clear_pokemon">Clear Pokémon</string>
    <string name="clear_pokemon_desc">Cleared the current Pokémon</string>
    <string name="clear_pokestops">Clear Pokestops</string>
    <string name="clear_pokestops_desc">Clears the current Pokestops</string>
    <string name="clear_gyms">Clear Gyms</string>
    <string name="clear_gyms_desc">Clears the current Gyms</string>
    <string name="show_lured_pokestops">Show Lured PokeStops</string>
    <string name="show_normal_pokestops">Show Normal Pokestops</string>
    <string name="icon_scale">Icon Scale</string>
    <string name="icon_scale_desc">Adjust the size of the icons</string>
    <string name="only_lured">Only Lured Pokestops</string>
    <string name="only_lured_desc">Displays only Pokestops with active lures</string>
    <string name="show_gyms">Show Gyms</string>
    <string name="show_gyms_desc">Enables/Disables Gyms on the map</string>
    <string name="show_pokestops">Show PokeStops</string>
    <string name="show_pokestop_desc">Enables/Disables Pokestops on the map</string>
    <string name="show_lured_pokemon">Show Lured Pokémon</string>
    <string name="show_lured_pokemon_desc">Shows the Pokémon icon instead of a lured pokestop icon (unless that Pokémon is filtered)</string>
    <string name="lock_gps">Scan Based on GPS</string>
    <string name="lock_gps_desc">Instead of scanning in the center of view (wherever you\'re looking) it will scan your location</string>
    <string name="old_marker">Use Old Map Markers</string>
    <string name="old_marker_desc"></string>
    <string name="driving_mode">Driving mode</string>
    <string name="driving_mode_desc">Keeps the map centered at your current location</string>
    <string name="shuffle_icons">Use Shuffle Icons</string>
    <string name="shuffle_icons_desc">Use Pokémon Shuffle Icons instead of the standard sprites (easier to distinguish!)</string>
    <string name="gyms_cleared">Gyms Cleared</string>
    <string name="pokestops_cleared">Pokestops Cleared</string>
    <string name="pokemon_cleared">Pokémon Cleared</string>
    <string name="icon">Icon</string>
    <string name="settingsbutton">SettingsButton</string>
    <string name="version_check_failed">Version check failed.</string>
    <string name="updating_pokescanner">Updating PokéScanner</string>
    <string name="update">Update</string>
    <string name="update_available_title">Update available</string>
    <string name="up_to_date">You have the latest version!</string>
    <string name="update_check_failed">Update check failed.</string>
    <string name="changes">Changes:</string>
    <string name="update_available_long">is available.</string>
    <string name="category_range">Range Options</string>
    <string name="category_update">Update Options</string>
    <string name="category_range_options">Range Options</string>
    <string name="guard_pokemon">Guard Pokémon : </string>
    <string name="gym_points">Gym points : </string>
    <string name="expires_in">Expires in : </string>
    <string name="lure_expires_in">Lure expires in : </string>
    <string name="lured_pokemon">Lured Pokémon</string>
    <string name="open_in_gmaps">Open in Google Maps</string>
    <string name="get_directions">In-App directions</string>
    <string name="click_open_in_gmaps">Click Here to open in Google Maps</string>
    <string name="ERROR_GENERATING_GRID">Error Generating Grid, Try again.</string>
    <string name="CAMERA_CENTER_FAILED">Failed to center camera.</string>
    <string name="LOGOUT_ERROR">Server not responding, Logging out</string>
    <string name="check_server_status">Check Server Status</string>
    <string name="Permission_Required_Auto_Updater">Permission is required for the auto-updater!</string>
    <string name="auto_update_denied">Permission Denied! Disabling auto updater :(</string>
    <string name="location_denied">App will not work without location!</string>
    <string name="Force_English_Names">Force English names</string>
    <string name="Force_English_Names_desc">Forces Pokémon names to default to English.</string>
    <string name="Check_For_Update">Check for updates</string>
    <string name="Check_For_Update_desc">Checks for an update manually</string>
    <string name="ERROR_NO_DIRECTION_SELECTED">No marker selected for directions!</string>
    <string name="Missing_GPS_Permission">Missing GPS/Location Permission</string>
    <string name="cleared_map">Map Cleared</string>
    <string name="faster">Faster</string>
    <string name="fast">Fast</string>
    <string name="normal">Normal</string>
    <string name="slow">Slow</string>
    <string name="slowest">Slowest</string>
    <string name="large">Large</string>
    <string name="small">Small</string>
    <string name="backup_load_error">The backup file could not be loaded</string>
    <string name="backup_creation_error">An error occured while creating the backup</string>
    <string name="backup_load_success">Backup loaded successfully</string>
    <string name="request_file_name">Enter the file name :</string>
    <string name="backup_location_message">The file will be stored in your downloads folder</string>
    <string name="create_backup">Create backup</string>
    <string name="file_name_error">Please enter a valid file name</string>
    <string name="backup_creation_successful">Backup created successfully</string>
    <string name="backup_read_permission">We need access to your file system in order to read the backup file</string>
    <string name="backup_write_permission">We need access to your file system in order to create the backup file</string>
    <string name="p1">Bulbasaur</string>
    <string name="p2">Ivysaur</string>
    <string name="p3">Venusaur</string>
    <string name="p4">Charmander</string>
    <string name="p5">Charmeleon</string>
    <string name="about_us_thanks">Thank you for using PokeScanner, we hope you enjoyed your experience!</string>
    <string name="chief_devs">Chief developers : \n\nBrianEstrada\nrhari991\nEZTEQ</string>
    <string name="about_us_please_donate">Please consider donating in order to support continued development</string>
    <string name="about_us_free_software">This is a free software, and is available only through Github and /r/PokeScanner. If you received this application from somewhere else, it may contain malicious code. Please support the developers by only downloading the app from official sources.</string>
</resources>