<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/category_map_options">

    <SwitchPreference
        android:key="boundingBoxEnabled"
        android:title="@string/show_range"
        android:summary="@string/show_range_desc"
        android:defaultValue="false"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

    <Preference
        android:title="@string/search_radius"
        android:summary="@string/search_radius_desc"
        android:key="scan_dialog"/>

    <SwitchPreference
        android:key="showLuredPokemon"
        android:title="@string/show_lured_pokemon"
        android:summary="@string/show_lured_pokemon_desc"
        android:defaultValue="true"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

    <SwitchPreference
        android:key="showGyms"
        android:title="@string/show_gyms"
        android:summary="@string/show_gyms_desc"
        android:defaultValue="true"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

    <SwitchPreference
        android:key="showPokestops"
        android:title="@string/show_pokestops"
        android:summary="@string/show_pokestop_desc"
        android:defaultValue="true"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

    <SwitchPreference
        android:key="drivingModeEnabled"
        android:title="@string/driving_mode"
        android:summary="@string/driving_mode_desc"
        android:defaultValue="false"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

    <PreferenceScreen
        android:title="@string/category_extendedMap_options"
        android:fragment="com.pokescanner.settings.SettingsFragment" >
        <extra
            android:name="page"
            android:value="advancedMapOptions" />
    </PreferenceScreen>

    <PreferenceScreen
        android:title="Advanced Icon options"
        android:fragment="com.pokescanner.settings.SettingsFragment" >
        <extra
            android:name="page"
            android:value="advancedIconOptions" />
    </PreferenceScreen>

</PreferenceScreen>
