<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:fragment="com.pokescanner.settings.SettingsActivityNew$AdvancedMapSettingsFragment"
    android:title="@string/category_extendedMap_options"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="server_refresh_rate_dialog"
        android:title="@string/server_refresh"
        android:summary="@string/server_refresh_desc" />

    <ListPreference
        android:key="mapRefreshRate"
        android:title="@string/map_refresh"
        android:summary="@string/map_refresh_desc"
        android:dialogTitle="@string/map_refresh"
        android:entries="@array/MapRereshRate"
        android:entryValues="@array/MapRereshRateValues"
        android:defaultValue="2" />

    <ListPreference
        android:key="pokemonIconScale"
        android:title="@string/icon_scale"
        android:summary="@string/icon_scale_desc"
        android:dialogTitle="@string/icon_scale"
        android:entries="@array/IconScale"
        android:entryValues="@array/IconScaleValues"
        android:defaultValue="2" />

    <SwitchPreference
        android:key="enableLowMemory"
        android:title="@string/enable_low_memory"
        android:summary="@string/enable_low_memory_desc"
        android:defaultValue="true"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

</PreferenceScreen>