<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pokescanner.LoginActivity"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/imageIcon"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poke_scanner"
        android:id="@+id/tvTitle"
        android:paddingBottom="20dp"
        android:textSize="40sp"
        android:textIsSelectable="false"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/Container">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUsername"
            android:hint="@string/username" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="37dp"
            android:text="@string/ptclogin"
            android:id="@+id/btnLogin"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="180dp"
            android:layout_height="37dp"
            android:text="@string/googlelogin"
            android:id="@+id/btnGoogleLogin"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/warning_nplease_do_not_use_your_main_pokego_naccount_for_this_app"
            android:id="@+id/tvWarning"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/check_server_status"
            android:id="@+id/tvCheckServer"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/tvVersionNumber" />

    </LinearLayout>

</LinearLayout>
